trying to fix the title from not showing

--- a/src/styles.css
+++ b/src/styles.css
@@ -9,12 +9,12 @@
   src: url("../font/Bytesized-Regular.ttf");
 }
 
-.titelWrapper {
+.titleWrapper {
+  position: relative;
   width: 100%;
   height: auto;
 }
 .battleshipTitle {
-  position: relative;
   display: block;
   text-align: center;
   font-size: 6rem;
@@ -65,6 +65,7 @@
   font-family: "byteFont", Arial, Helvetica, sans-serif;
   font-weight: bolder;
   z-index: 25;
+  display: none;
 }
 
 .player1Board,
